[tool.poetry]
name = "usppm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.12"
wandb = "^0.12.17"
pandas = "^1.4.2"
transformers = "^4.19.2"
numpy = "^1.22.4"
torch = "^1.11.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
